	* WHERE clauses now support Arrays and `nil` values for labels
	* WHERE clauses with strings now support a second argument for parameters.  Examples:
	  * `where("foo = {bar}", bar: value)`)
	  * `where("foo = ?", value)`)
	* REMOVE clauses now quote labels and support arrays to specify all labels
	and properties for one variable
	* RETURN clauses now turn `:neo_id` into `ID(var)`


== 4.0.0
This release focuses mostly on performance and security.
* Fixed a few n+1 queries, force the use of params in more common locations.
* The CypherTransaction class was heavily refactored to improve the number of database connections required per transaction. This may be considered a breaking API change. Using `Neo4j::Transaction.new` or `Neo4j::Transaction.run` as instructed in all docs and examples protects the user from this, so there should be no changes required to old code in most cases.
* New Rake task: `neo4j:start_no_wait` -- thanks, @telzul!
* Massive refactoring and general cleanup by Brian.

== 3.1.1
* Force more basic, common queries to use params. Early benchmarks suggest big performance improvements.
* Auth improvements. You can now use a valid Neo4j token with any username to authenticate.

== 3.1.0
* Swapped out `START n=node...` for `MATCH (n) WHERE ID(n)...` for compatibility with Neo4j 2.2.
* Added a new class, CypherAuthentication, to support Neo4j 2.2's new authentication endpoint.
* Modified the `neo4j:install` rake task to disable authentication in Neo4j 2.2.
* New rake tasks that do exactly what you expect: `neo4j:enable_auth`, `neo4j:disable_auth`, `neo4j:change_password`. All 2.2 only, of course.
* Travis-CI will run against its MRI specs against Neo4j 2.2 with Ruby 2.1.5.
* Use params for all `create` actions to improve performance and security.
* More tweaks to the string escaping process.
* Mild refactoring for DRY and performance.

== 3.0.8
* Small bugfix. Releasing so neo4jrb/neo4j doesn't need to pull from master in its new release.

== 3.0.7